--- a/js/components/data/identify/style/topchart.css
+++ b/js/components/data/identify/style/topchart.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     padding: 15px;
     margin: 15px;
+    border: 1px solid #dddddd;
 }
 
 .buttoncard {
@@ -14,6 +15,23 @@
     padding: 15px;
     margin: 15px;
     justify-content: space-evenly;
+    border: 1px solid #dddddd;
+}
+
+.mapstore-side-card {
+    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.06), 0 4px 8px rgba(0, 0, 0, 0.12);
+    -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.06), 0 4px 8px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.06), 0 4px 8px rgba(0, 0, 0, 0.12);
+    width: 100%;
+    margin: 10px 0 0 0;
+    display: flex;
+    transition: all 0.3s;
+    flex-direction: column;
+    border-top: 1px solid #dddddd;
+    border-left: 1px solid #dddddd;
+    border-right: 1px solid #dddddd;
+    border-bottom: 0px solid #dddddd;
+
 }
 
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover {
