--- a/js/components/data/identify/style/topchart.css
+++ b/js/components/data/identify/style/topchart.css
@@ -1,4 +1,4 @@
-.mygridcard {
+.IdentifyGridCard {
     box-shadow: 0 3px 6px rgba(0,0,0,0.12), 0 3px 6px rgba(0,0,0,0.12);
     transition: box-shadow 250ms;
     display: flex;
