--- a/js/components/data/identify/style/topchart.css
+++ b/js/components/data/identify/style/topchart.css
@@ -1,3 +1,25 @@
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #dddddd;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #bbbbbb;
+    box-shadow: inset 0 0 1px ;
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #aaaaaa;
+}
+
+
 .IdentifyGridCard {
     box-shadow: 0 3px 6px rgba(0,0,0,0.12), 0 3px 6px rgba(0,0,0,0.12);
     transition: box-shadow 250ms;
