--- a/js/components/data/identify/style/topchart.css
+++ b/js/components/data/identify/style/topchart.css
@@ -25,19 +25,36 @@
     transition: box-shadow 250ms;
     display: flex;
     flex-direction: column;
-    padding: 15px;
+    padding: 5px;
+    margin: 15px;
+    border: 1px solid #dddddd;
+}
+
+.VerdureGridCard {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.12), 0 3px 6px rgba(0,0,0,0.12);
+    transition: box-shadow 250ms;
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
     margin: 15px;
     border: 1px solid #dddddd;
 }
 
 .buttoncard {
-    box-shadow: 0 3px 6px rgba(0,0,0,0.12), 0 3px 6px rgba(0,0,0,0.12);
-    transition: box-shadow 250ms;
+
+
+    margin-bottom: 20px;
+
+    margin-bottom: 0px;
+    border-bottom: 1px solid #dddddd;
+
+    padding-top: 15px;
+    padding-bottom: 15px;
+
     display: flex;
-    padding: 15px;
-    margin: 15px;
+    transition: all 0.3s;
+
     justify-content: space-evenly;
-    border: 1px solid #dddddd;
 }
 
 .mapstore-side-card {
