--- a/js/components/data/identify/style/topchart.css
+++ b/js/components/data/identify/style/topchart.css
@@ -65,6 +65,7 @@
     padding-bottom: 10px;
     padding-top: 10px;
     text-align: center;
+    border-bottom: 1px solid #dddddd;
 }
 
 .opacityslider {
