--- a/js/components/data/identify/style/topchart.css
+++ b/js/components/data/identify/style/topchart.css
@@ -25,9 +25,10 @@
     transition: box-shadow 250ms;
     display: flex;
     flex-direction: column;
-    padding: 5px;
+    padding: 0px;
     margin: 15px;
     border: 1px solid #dddddd;
+    position: relative;
 }
 
 .VerdureGridCard {
